--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,10 @@ jobs: #trabalhos do workflow que podem run em paralelo
       run: docker compose up -d postgres
 
     - name: Lint
-      run: docker run --rm -itv $(pwd):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+      uses: golangci/golangci-lint-action@v6
+      with:
+          version: v1.60
+          args: controllers/ database/ models/ routes/     
 
     - name: Test
       run: go test -v main_teste.go
