--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,4 +31,4 @@ jobs: #trabalhos do workflow que podem run em paralelo
           args: controllers/ database/ models/ routes/     
 
     - name: Test
-      run: go get main_teste.go
+      run: go test -v main_teste.go
