--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,3 +32,13 @@ jobs: #trabalhos do workflow que podem run em paralelo
 
     - name: Test
       run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
+    
+    - name: Build
+      run: go build main.go #compila projeto e gera o executavel main.go
+      
+    - name: Projeto compilado
+      uses: actions/upload-artifact@v4
+      with:
+        name: projeto_compilado
+        path: main
+      
